--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 BloodConnect. All rights reserved. Made with ❤️ for Bangladesh</p>
+                <p>&copy; 2025 BloodConnect. All rights reserved. Made with ❤️ for Bangladesh</p>
             </div>
         </div>
     </footer>
@@ -289,5 +289,5 @@
     <script src="script.js"></script>
 </body>
 </html>
---- END OF FILE index.html ---
+--- datanoman.github.io ---
   
