--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
                         <p><i class="fas fa-map-marker-alt"></i> Ramna, Dhaka</p>
                         <p><i class="fas fa-clock"></i> 2 hours ago</p>
                     </div>
+                    <a href="donors/register.php"
                     <button class="btn btn-emergency">Help Now</button>
+                    </a>
                 </div>
             </div>
         </div>
